--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <!-- The Howler.js library handles background audio playback directly in JS, no need for a visible HTML audio element -->
 
-    <div id="final-screen" class="section"><h1>I Love You, [Girlfriend's Name]!</h1><p>I hope you have the most wonderful birthday ever. You deserve all the happiness in the world.I hope you have the most wonderful birthday ever. You deserve all the happiness in the world.I hope you have the most wonderful birthday ever. You deserve all the happiness in the world.I hope you have the most wonderful birthday ever. You deserve all the happiness in the world.I hope you have the most wonderful birthday ever.</p><p>With all my love,<br>[Your Name]</p><button onclick="replaySurprise()">Replay the Surprise?</button></div>
+    <div id="final-screen" class="section"><h1>I Love You, [Girlfriend's Name]!</h1><p>I hope you have the most wonderful birthday ever. You deserve all the happiness in the world.I hope you have the most wonderful birthday ever. You deserve all the happiness in the world.I hope you have the most wonderful birthday ever. You deserve all the happiness in the world.I hope you have the most wonderful birthday ever. You</p><p>With all my love,<br>[Your Name]</p><button onclick="replaySurprise()">Replay the Surprise?</button></div>
 
     <script>
         // Global variable to hold the p5.js instance
