--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
         const finalScreenParticlesConfig = {
             particles: {
                 number: { value: 30, density: { enable: true, area: 800 } }, // Number of hearts
-                color: { value: "#ff0000" }, // This color might tint the image if it's not purely red
+                //color: { value: "#ff0000" }, // This color might tint the image if it's not purely red
                 shape: {
                     type: "image",
                     image: {
@@ -716,7 +716,7 @@
                     }
                 },
                 opacity: { value: 0.7, random: true },
-                size: { value: { min: 30, max: 40 }, random: true }, // Display size of the hearts (pixels)
+                size: { value: { min: 40, max: 50 }, random: true }, // Display size of the hearts (pixels)
                 links: { enable: false }, // No lines between hearts
                 move: {
                     enable: true,
@@ -725,7 +725,7 @@
                     random: true,
                     straight: false,
                     outModes: { default: "out" },
-                    attract: { enable: true, rotateX: 600, rotateY: 1200 }
+                    attract: { enable: false, rotateX: 600, rotateY: 1200 }
                 }
             },
             interactivity: {
